--- a/package.json
+++ b/package.json
@@ -6,23 +6,23 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "bcryptjs": "*",
     "body-parser": "~1.19.0",
+    "connect-flash": "*",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
-    "http-errors": "~1.6.3",
     "express-handlebars": "*",
+    "express-messages": "*",
+    "express-session": "*",
+    "express-validator": "^5.3.1",
+    "http-errors": "~1.6.3",
+    "mongodb": "*",
+    "mongoose": "*",
     "morgan": "~1.9.1",
-    "serve-favicon": "*",
-    "bcryptjs": "*",
     "passport": "*",
     "passport-http": "*",
     "passport-local": "*",
-    "mongodb": "*",
-    "mongoose": "*",
-    "express-session": "*",
-    "connect-flash": "*",
-    "express-messages": "*",
-    "express-validator": "* "
+    "serve-favicon": "*"
   }
 }
